# tournesol

./: .gitignore  CMakeLists.txt  README.md  firmwareTurret.uf2  serial_motor.cpp
python_control/: binarySerialTest.py  control.py  control_calibration.py  requirements.txt  serial_test.py
